Fixed Demo Overflow on Monitor Element

--- a/css/main.css
+++ b/css/main.css
@@ -11,6 +11,7 @@ html { box-sizing: border-box; }
 
 * {
   --indigo: #6201ff;
+  --indigo-shadow: #140037;
   /* --green: #004a21;
   --green-shadow: #001f0d; */
   /* --green: #08A045;
@@ -172,7 +173,7 @@ header nav a:last-child {
   left: 0; top: 0;
   width: 100%;
   height: 100vh;
-  background: #140037;
+  background: var(--indigo-shadow);
   z-index: 101;
   transform: translateY(-100%);
   opacity: 0;
@@ -374,7 +375,7 @@ header nav a:last-child {
   flex-direction: column;
   justify-content: space-between;
   overflow: hidden;
-  padding-bottom: calc(10vh + 25px);
+  padding-bottom: calc(10vh + 15px);
 
 }
 #demo .blurb { margin-bottom: 50px; }
@@ -398,7 +399,7 @@ header nav a:last-child {
   align-self: center;
   border: 1vmin solid transparent;
   padding: 3vmin 6vmin 9vmin 6vmin;
-  height: 49vmin;  /* 40vmin .monitor + 9vmin padding-bottom  */
+  height: 52vmin;  /* 40vmin .monitor + 3vmin padding-top + 9vmin padding-bottom  */
   border-radius: 1.5vmin;
   display: flex;
   justify-content: center;
